--- a/.github/workflows/process-json-generate-excel.yml
+++ b/.github/workflows/process-json-generate-excel.yml
@@ -79,24 +79,6 @@ jobs:
           });
         };
 
-        const filterKeys = (entry) => {
-              const filteredEntry = { ...entry };
-              EXCLUDED_KEYS.forEach((key) => delete filteredEntry[key]);
-            
-              // Normalize Boolean-like string values
-              for (const key in filteredEntry) {
-                if (typeof filteredEntry[key] === "string") {
-                  if (filteredEntry[key].toUpperCase() === "TRUE") {
-                    filteredEntry[key] = true;
-                  } else if (filteredEntry[key].toUpperCase() === "FALSE") {
-                    filteredEntry[key] = false;
-                  }
-                }
-              }
-            
-              return filteredEntry;
-            };
-
         const getHeaders = (data1, data2) => {
           const allKeys = new Set();
           data1.forEach((entry) => Object.keys(entry).forEach((key) => allKeys.add(key)));
@@ -142,35 +124,27 @@ jobs:
           return Array.from(allKeys).every((key) => filteredEntry1[key] === filteredEntry2[key]);
         };
 
-                  const findSimilarEntries = (newData, oldData) => {
-            return newData
-              .map(filterKeys) // Normalize rows for new data
-              .filter((entry) => {
-                const matchingOldEntry = oldData.find((oldEntry) => {
-                  return areEntriesEqual(filterKeys(entry), filterKeys(oldEntry)); // Normalize old entry too
-                });
-                return matchingOldEntry;
-              });
-          };
+                  
+        const findSimilarEntries = (newData, oldData) => {
+          return newData.filter((entry) => {
+            const matchingOldEntry = oldData.find((oldEntry) => oldEntry.key === entry.key);
+            return matchingOldEntry && areEntriesEqual(entry, matchingOldEntry);
+          });
+        };
 
         const findDifferentEntries = (newData, oldData, lobNew, lobOld) => {
-  const differentEntries = [];
+          const differentEntries = [];
 
-                newData.forEach((entry) => {
-                  const normalizedNewEntry = filterKeys(entry); // Normalize new entry
-                  const matchingOldEntry = oldData.find((oldEntry) => {
-                    return areEntriesEqual(normalizedNewEntry, filterKeys(oldEntry)); // Normalize old entry too
-                  });
-              
-                  if (matchingOldEntry && !areEntriesEqual(normalizedNewEntry, filterKeys(matchingOldEntry))) {
-                    differentEntries.push({ source: `LOB: ${lobNew}`, ...normalizedNewEntry });
-                    differentEntries.push({ source: `LOB: ${lobOld}`, ...filterKeys(matchingOldEntry) });
-                  }
-                });
-              
-                return differentEntries;
-              };
+          newData.forEach((entry) => {
+            const matchingOldEntry = oldData.find((oldEntry) => oldEntry.key === entry.key);
+            if (matchingOldEntry && !areEntriesEqual(entry, matchingOldEntry)) {
+              differentEntries.push({ source: "LOB: " + lobNew, ...entry });
+              differentEntries.push({ source: "LOB: " + lobOld, ...matchingOldEntry });
+            }
+          });
 
+          return differentEntries;
+        }; 
         const generateExcelFromJson = (workbook, newJson, oldJson, parentKey, lobNew, lobOld) => {
           if (parentKey === "smartling") return;
 
